# resume-screener

./: README.md  app.py  main.py  pdf_reader.py  pipeline.py  preprocessing.py  pyproject.toml  requirements.txt  roles_config.py  setup.py
Notebook/: clean_data.ipynb
preprocessing/: clean_data.ipynb
src/: exceptions.py  loggers.py  preprocessing.py  ranking.py
src/components/: pdf_reader.py  preprocessing.py  ranking.py
src/pipeline/: pipeline.py
src/utils/: skills.py
